# ThorKivy

./: .gitignore  .gitmodules  check_pixels.py  check_screenshot.py  kivy_canvas_vs_thor_canvas.md  pyproject.toml  setup.py  tgv-glcanvas+kivy-canvas.md
src/thorkivy/: __init__.py  __main__.py  instructions.pxd  instructions.pyi  instructions.pyx
src/thorkivy/examples/: __init__.py  example_app.py  screen_0.py  screen_1.py  screen_2.py  screen_3.py  screen_4.py  screen_5.py  screen_6.py  screen_7.py  svg_screen_inactive.py
